# gsdui

./: Cargo.toml  lefthook.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-backend-foundation-and-state-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-pipeline-dashboard/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
frontend/: package-lock.json  package.json  svelte.config.js  vitest.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: test-utils.ts
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/: 001_initial_schema.sql
src/: broadcast.rs  config.rs  lib.rs  main.rs  state.rs
src/api/: config.rs  files.rs  health.rs  history.rs  mod.rs  projects.rs  state_api.rs
src/db/: mod.rs  models.rs  schema.rs
src/parser/: agent_history.rs  config_json.rs  frontmatter.rs  mod.rs  plan.rs  roadmap.rs  stage.rs  state_md.rs  summary.rs  verification.rs
src/watcher/: debounce.rs  mod.rs  pipeline.rs  retention.rs
src/ws/: messages.rs  mod.rs
static/: index.html
static/_app/: version.json
tests/: api_integration.rs  watcher_integration.rs  ws_integration.rs
(+65 files in other folders)
